- fix trend on zero not showing. - remove chart legend thousand formatting. - fix bar chart stacked and legend display. - added support for readable headers in tables. - fix line chart display.

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -34,7 +34,6 @@
       margin-left: 10px;
       &.minimal {
         margin-left: 6px;
-        opacity: 0.7;
         display: inline-block;
         float: none;
         vertical-align: top;
